// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Burnout with first burnout preset should not render last marker 1`] = `
preact-render-spy (1 nodes)
-------
<article class="burnout">
  <h2>burnout</h2>
  <output>
    <dl>
      <dt>preset</dt>
      <dd>3 X 3 in</dd>
      <dt>time</dt>
      <dd>8 hours</dd>
    </dl>
  </output>
</article>

`;

exports[`Burnout with last burnout preset should render last marker 1`] = `
preact-render-spy (1 nodes)
-------
<article class="burnout">
  <h2>burnout</h2>
  <output>
    <dl>
      <dt>preset</dt>
      <dd>
        4 X 8 in
        <span class="longest">longest</span>
      </dd>
      <dt>time</dt>
      <dd>15 hours</dd>
    </dl>
  </output>
</article>

`;
